menambahkan titik pada kata vitae

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1 class="text-header">Curriculum Vitae</h1>
+        <h1 class="text-header">Curriculum Vitae.</h1>
       </div>
       <div class="navbar">
         <ul class="list-nav">
@@ -30,15 +30,13 @@
               <tr>
                 <td class="text-left">Facebook</td>
                 <td>
-                  <a href="facebook.com">fajar syaputra</a>
+                  <a href="facebook.com">@fajar syaputra</a>
                 </td>
               </tr>
               <!--akun fb-->
               <tr>
                 <td class="text-left">Instagram</td>
-                <td>
-                  <a href="instagram.com">@fajar syaputra</a>
-                </td>
+                <td><a href="instagram.com">@fajar syaputra</a>kk</td>
               </tr>
               <!--akun ig-->
               <tr>
